import depuis json envoyé par Android